--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,14 @@
       "script": "dev",
       "problemMatcher": [],
       "label": "npm: dev",
-      "detail": "vite"
+      "detail": "Run development server"
+    },
+    {
+      "type": "npm",
+      "script": "lint",
+      "problemMatcher": ["$eslint-stylish"],
+      "label": "npm: lint",
+      "detail": "Run code quality tools, e.g. ESLint, TSLint, etc."
     }
   ]
 }
